[Addition] True navbar, yay!

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,9 +1,9 @@
 = content_for(:title, "C4$$hK4l4$$h")
 %link{:rel => :stylesheet, :type => :"text.css", :href => "/assets/main_page"}
-%container_fluid{:class => "logo"}
-  %h1 Casseurs Overflowtants
-  %p Joli site plein de fleurs
-%section{:class => "map", :id => "map"}
+
+%div{:class => "nav_background"}
+  %div{:class => "background_fit"}
+%div{:id => "map"}
   %script{:src => "/assets/OpenLayers.js"}
   %script
     var zoom = 15;
