--- a/app/assets/stylesheets/main_page.css
+++ b/app/assets/stylesheets/main_page.css
@@ -24,13 +24,43 @@ container_fluid
     height: 500px;
 }
 
-.logo
+.nav_background
 {
-    background-color: red;
-    height: 20%
+    width: 100%;
+    height: 15%;
 }
 
-.map
+.img_fit
 {
-    height: 80%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.background_fit
+{
+    height: 100%;
+    object-fit: contain;
+    background: url("fond-menu.jpg") top right no-repeat, url("bar.jpg") repeat-x;
+}
+
+.map_fit
+{
+    height: 100%;
+    object-fit: contain;
+}
+
+#map
+{
+    width: 100%;
+    height: 85%;
+}
+
+.float_left
+{
+    float: left;
+}
+
+.float_right
+{
+    float: right;
 }
