--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,6 +3,9 @@
 
 %div{:class => "nav_background"}
   %div{:class => "background_fit"}
+    %p{:class => "nav_title"} K4$hK4l4$h 
+    %p{:class => "nav_desc"} CHERCHER OU PROPOSER UN REFUGE D'URGENCE
+    %button{:type => "button"}
 %div{:id => "map"}
   %script{:src => "/assets/OpenLayers.js"}
   %script
