--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,6 +2,8 @@
 %link{:rel => :stylesheet, :type => :"text.css", :href => "/assets/main_page"}
 %container_fluid{:class => "logo"}
   %h1 Casseurs Overflowtants
+  = link_to( "Sign in with Facebook", user_omniauth_authorize_path(:facebook))
+  = link_to "Log in with Facebook", "/auth/facebook"
   %p Joli site plein de fleurs
 %section{:class => "map", :id => "map"}
   %script{:src => "/assets/OpenLayers.js"}
