--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,7 +5,14 @@
   %div{:class => "background_fit"}
     %p{:class => "nav_title"} K4$hK4l4$h 
     %p{:class => "nav_desc"} CHERCHER OU PROPOSER UN REFUGE D'URGENCE
-    %button{:type => "button"}
+    %img{:src => "/assets/localisation.png", :alt => "localisez-moi", :id => "button_locate"}
+    %button{:type => "button", :class => "easter_egg"}
+      %a{:href => "/views/starwars.html.haml"}SUCE
+    %p{:class => "menu_action", :id => "menu_danger"} Danger
+    %p{:class => "menu_action", :id => "menu_maison"} Refuge
+    %p{:class => "menu_action", :id => "menu_locate"} Où suis-je ?
+    %img{:src => "/assets/maison.png", :alt => "declarez-moi", :id => "button_declare"}
+    %img{:src => "/assets/danger.png", :alt => "dangerisez-moi", :id => "button_danger"}
 %div{:id => "map"}
   %script{:src => "/assets/OpenLayers.js"}
   %script
@@ -25,9 +32,9 @@
 
     map.setCenter(lonLat, 14);
 
-    var size = new OpenLayers.Size(21,25);
+    var size = new OpenLayers.Size(44, 48);
     var offset = new OpenLayers.Pixel(-(size.w/2), -size.h);
-    var icon = new OpenLayers.Icon('/assets/marker.png', size, offset);
+    var icon = new OpenLayers.Icon('/assets/localisation.png', size, offset);
 
 
     var markers = new OpenLayers.Layer.Markers( "Markers" );
