[Add] eqster egg

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,7 +7,7 @@
     %p{:class => "nav_desc"} CHERCHER OU PROPOSER UN REFUGE D'URGENCE
     %img{:src => "/assets/localisation.png", :alt => "localisez-moi", :id => "button_locate"}
     %button{:type => "button", :class => "easter_egg"}
-      %a{:href => "/views/starwars.html.haml"}SUCE
+      %a{:href => "home/starwars"}.
     %p{:class => "menu_action", :id => "menu_danger"} Danger
     %p{:class => "menu_action", :id => "menu_maison"} Refuge
     %p{:class => "menu_action", :id => "menu_locate"} Où suis-je ?
