[Add] page names

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
-= content_for(:title, "C4$$hK4l4$$h")
+= content_for(:title, "ShelterFinder")
 %link{:rel => :stylesheet, :type => :"text.css", :href => "/assets/main_page"}
 %div{:class => "nav_background"}
   %div{:class => "background_fit"}
