--- a/app/views/home/starwars.html.haml
+++ b/app/views/home/starwars.html.haml
@@ -1,3 +1,4 @@
+= content_for(:title, "ShelterFinder")
 %link{:rel => :stylesheet, :type => :"text.css", :href => "/assets/star_wars"}
 #map{:style => "display:block; visibility:hidden"}
   %iframe{:allowfullscreen => "", :frameborder => "0", :height => "315", :src => "https://www.youtube.com/embed/EjMNNpIksaI?autoplay=1", :width => "420"}
