--- a/app/assets/stylesheets/main_page.css
+++ b/app/assets/stylesheets/main_page.css
@@ -41,8 +41,9 @@ html, body
 
 #map
 {
+    z-index: 1;
     width: 100%;
-    height: 83%;
+    height: 73%;
 }
 
 .float_left
@@ -145,4 +146,40 @@ html, body
     position: absolute;
     top: 1.5%;
     right: 50%;
+    opacity: 0.1;
+}
+
+.hidden
+{
+    display: none;
+}
+
+.visible
+{
+    display: block;
+    position: absolute;
+    top: 17%;
+    right: 35%;
+    width: 35%;
+    height: 68%;
+    background-color: #D60F16;
+    opacity: 0.5;
+}
+
+.barre
+{
+
+    position: absolute;
+    top: 90%;
+    width: 100%;
+    height: 100%;
+    background-color: #D60F16;
+}
+
+#connect_button
+{
+    background: url("Fb_logo.jpg");
+    position: absolute;
+    top: 3%;
+    left: 2%;
 }
