--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -19,7 +19,7 @@
 %div{:id => "map"}
 %container_fluid{:class => "logo"}
   %h1 Casseurs Overflowtants
-  = link_to( "Sign in with Facebook", user_omniauth_authorize_path(:facebook))
+  = link_to("Sign in with Facebook", user_omniauth_authorize_path(:facebook))
   = link_to "Log in with Facebook", "/auth/facebook"
 %section{:class => "map", :id => "map"}
   %script{:src => "/assets/OpenLayers.js"}
@@ -53,4 +53,5 @@
     }
 
 %div{:id => "bottom_line", :class => "barre"}
-  %img{:src => "/assets/Fb_logo.jpg", :alt => "FB", :id => "connect_button"}
+  %div{:id => "connect_button"}
+    = link_to image_tag("Fb_logo.png"), user_omniauth_authorize_path(:facebook)
