--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,8 +9,7 @@
       %a{:href => "home/starwars"}.
     %p{:class => "menu_action", :id => "menu_danger"} Danger
 
-    %script{:src => "/assets/ConnectionAPI.js"}
-    %p{:class => "menu_action", :id => "menu_maison", :onclick => "ConnectionAPI"} Refuge
+    %p{:class => "menu_action", :id => "menu_maison"} Refuge
 
     %div{:class => "hidden", :id => "connectionTab"}
     %p{:class => "menu_action", :id => "menu_locate"} Où suis-je
